--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.datasource.url=jdbc:mysql://mydb.cdljq1g07ntk.sa-east-1.rds.amazonaws.com:3306/abroad
-spring.datasource.username=juan
-spring.datasource.password=
-spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.jackson.serialization.write_dates_as_timestamps=false
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/dbo.skip?verifyServerCertificate=false&useSSL=true
+spring.datasource.username=admin
+spring.datasource.password=123456
+spring.datasource.initialize=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
