--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/dbo.skip?verifyServerCertificate=false&useSSL=true
-spring.datasource.username=admin
-spring.datasource.password=123456
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+# Datasource
+spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.initialize=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
